syntax = "proto3";

package agent;

import "common/entities.proto";
import "common/metadata.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/compozy/compozy/pkg/pb/agent";

// -----------------------------------------------------------------------------
// Agent Execute Command
// -----------------------------------------------------------------------------

message AgentExecuteCommand {
  common.Metadata metadata = 1;
  common.WorkflowInfo workflow = 2;
  common.TaskInfo task = 3;
  common.AgentInfo agent = 4;

  message Payload {
    google.protobuf.Struct context = 1;
  }
  Payload payload = 5;
}
